@@ -2,13 +2,14 @@
 # this repository contains the full copyright notices and license terms.
 from decimal import Decimal
 
-from trytond.pool import PoolMeta
+from trytond.pool import PoolMeta, Pool
 
 from trytond.modules.coog_core import fields
 
 __metaclass__ = PoolMeta
 __all__ = [
     'Contract',
+    'CoveredElement',
     ]
 
 
@@ -26,59 +27,59 @@ class Contract:
         'get_paid_amount')
     first_not_null_invoice = fields.Function(
         fields.Many2One('contract.invoice', 'First Not Null Invoice'),
-        'get_insurer_report_invoice')
+        'get_first_not_null_invoice')
     last_paid_invoice = fields.Function(
         fields.Many2One('contract.invoice', 'Last Paid Invoice'),
-        'get_insurer_report_invoice')
+        'get_last_paid_invoice')
     number_paid_premiums = fields.Function(
         fields.Integer('Number of Paid Premiums'),
-        'get_insurer_report_invoice')
+        'get_number_paid_premiums')
 
     @classmethod
-    def get_insurer_report_invoice(cls, contracts, names):
-        first_not_null_invoices = {c.id: None for c in contracts}
-        last_paid_invoices = {c.id: None for c in contracts}
-        numbers_paid_invoices = {c.id: 0 for c in contracts}
-
+    def get_first_not_null_invoice(cls, contracts, name):
+        res = {c.id: None for c in contracts}
         for contract in contracts:
-            first_not_null_invoice = last_paid_invoice = None
-            number_paid_invoices = 0
-            sorted_not_null_invoices = sorted([x for x in contract.invoices if
-                    x.invoice.total_amount != 0], key=lambda k: k.invoice.start)
-            if sorted_not_null_invoices:
-                first_not_null_invoice = sorted_not_null_invoices[0]
-                paid_invoices = [x for x in sorted_not_null_invoices
-                    if x.invoice.state == 'paid']
-                if paid_invoices:
-                    last_paid_invoice = paid_invoices[-1]
-                    number_paid_invoices = len(paid_invoices)
+            first_not_null_invoice = Pool().get('contract.invoice').search([
+                    ('contract', '=', contract.id),
+                    ('total_amount', '!=', 0)],
+                order=[('start', 'ASC')], limit=1)
+            if first_not_null_invoice:
+                res[contract.id] = first_not_null_invoice[0]
+        return res
 
-            first_not_null_invoices[contract.id] = first_not_null_invoice
-            last_paid_invoices[contract.id] = last_paid_invoice
-            numbers_paid_invoices[contract.id] = number_paid_invoices
+    @classmethod
+    def get_last_paid_invoice(cls, contracts, name):
+        res = {c.id: None for c in contracts}
+        for contract in contracts:
+            last_paid_invoice = Pool().get('contract.invoice').search([
+                    ('contract', '=', contract.id),
+                    ('invoice_state', '=', 'paid')],
+                order=[('start', 'DESC')], limit=1)
+            if last_paid_invoice:
+                res[contract.id] = last_paid_invoice[0]
+        return res
 
-        result = {
-            'first_not_null_invoice': first_not_null_invoices,
-            'last_paid_invoice': last_paid_invoices,
-            'number_paid_premiums': numbers_paid_invoices,
-            }
-        return {key: result[key] for key in names}
+    @classmethod
+    def get_number_paid_premiums(cls, contracts, name):
+        res = {c.id: 0 for c in contracts}
+        for contract in contracts:
+            res[contract.id] = Pool().get('contract.invoice').search_count([
+                    ('contract', '=', contract.id),
+                    ('invoice_state', '=', 'paid')])
+        return res
 
     @classmethod
     def get_paid_amount(cls, contracts, names):
         paid_amounts_incl_tax = {c.id: Decimal('0.0') for c in contracts}
         paid_amounts_excl_tax = {c.id: Decimal('0.0') for c in contracts}
         paid_amounts_taxes = {c.id: Decimal('0.0') for c in contracts}
-        for contract in contracts:
-            paid_amounts = [(x.invoice.total_amount, x.invoice.untaxed_amount,
-                    x.invoice.tax_amount) for x in contract.invoices
-                if x.invoice_state == 'paid']
-            if paid_amounts:
-                paid_amount_incl_tax, paid_amount_excl_tax, paid_amount_taxes \
-                    = [sum(x, 0) for x in zip(*paid_amounts)]
-                paid_amounts_incl_tax[contract.id] = paid_amount_incl_tax
-                paid_amounts_excl_tax[contract.id] = paid_amount_excl_tax
-                paid_amounts_taxes[contract.id] = paid_amount_taxes
+
+        for invoice in Pool().get('account.invoice').search([
+                ('contract', 'in', [x.id for x in contracts]),
+                ('state', '=', 'paid')]):
+            paid_amounts_incl_tax[invoice.contract.id] += invoice.total_amount
+            paid_amounts_excl_tax[invoice.contract.id] += invoice.untaxed_amount
+            paid_amounts_taxes[invoice.contract.id] += invoice.tax_amount
 
         result = {
             'paid_amount_incl_tax': paid_amounts_incl_tax,
@@ -86,3 +87,33 @@ class Contract:
             'paid_amount_taxes': paid_amounts_taxes,
             }
         return {key: result[key] for key in names}
+
+
+class CoveredElement:
+    __name__ = 'contract.covered_element'
+
+    def get_covered_element_options_premiums(self):
+        option_dict_list = []
+        if not self.options:
+            return option_dict_list
+        Option = Pool().get('contract.option')
+        names = ['monthly_premium_excl_tax', 'monthly_premium_incl_tax',
+            'monthly_taxes', 'annual_premium_excl_tax',
+            'annual_premium_incl_tax', 'annual_taxes']
+        premiums = Option.get_premium(list(self.options), names, None)
+        for option in self.options:
+            option_dict_list.append(
+                {
+                    'option': option,
+                    'monthly_premium_excl_tax': premiums[
+                        'monthly_premium_excl_tax'][option.id],
+                    'monthly_premium_incl_tax': premiums[
+                        'monthly_premium_incl_tax'][option.id],
+                    'monthly_taxes': premiums['monthly_taxes'][option.id],
+                    'annual_premium_excl_tax': premiums[
+                        'annual_premium_excl_tax'][option.id],
+                    'annual_premium_incl_tax': premiums[
+                        'annual_premium_incl_tax'][option.id],
+                    'annual_taxes': premiums['annual_taxes'][option.id],
+                })
+        return option_dict_list
