@@ -1,3 +1,5 @@
+* FEA#6403 Amélioration des performances des champs liés aux quittances du contrat
+
 Version 1.12 - 2017-04-28
 * FEA#0000 Ajout de champs liées au contrat et option du contrat
 
