@@ -1,3 +1,5 @@
+* FEA#6403 Enhance contract's invoices related fields performances
+
 Version 1.12 - 2017-04-28
 * FEA#0000 Add contract and option related fields
 
